--- a/style.css
+++ b/style.css
@@ -1,1 +1,52 @@
+html {
+  background-color: lavender;
+  color: purple;
+  font-family: "Press Start 2P", cursive;
+}
 
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+}
+
+#mainContent {
+  display: flex;
+  flex-direction: row;
+  gap: 50px;
+}
+
+#controlPanel {
+  border: 1px solid black;
+  width: 250px;
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: center;
+  justify-content: center;
+}
+
+.btn {
+  background-color: white;
+  border-radius: 5px;
+  border: 1px purple solid;
+  width: 200px;
+  padding: 10px 0px;
+  font-family: "Press Start 2P", cursive;
+}
+
+#gridContainer {
+  display: grid;
+  border: 1px solid black;
+  width: 500px;
+  height: 500px;
+}
+
+.square {
+  background-color: white;
+  height: 20px;
+  width: 20px;
+}
