--- a/style.css
+++ b/style.css
@@ -15,28 +15,33 @@ body {
   gap: 50px;
 }
 
+/* CONTROL PANEL -------------------------------- */
 #controlPanel {
   border: 1px solid black;
   width: 250px;
   height: 500px;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  align-items: center;
+  display: grid;
+  grid-template-columns: repeat(2, 100px);
+  padding: 10px;
+  gap: 5px;
   justify-content: center;
 }
 
 .btn {
   background-color: white;
   border-radius: 5px;
-  border: 2px purple solid;
-  width: 200px;
+  border: 2px black solid;
+  /* width: 100px; */
   padding: 10px 0px;
   font-family: "Press Start 2P", Courier, cursive;
 }
-
 .btn:hover {
   background: rgb(198, 195, 195);
+  border: 1px solid red;
+}
+#refreshPageBtn,
+#resizeGridBtn {
+  grid-column: 1 / 3;
 }
 
 #gridContainer {
@@ -51,8 +56,4 @@ body {
   background-color: white;
   padding: 0;
   margin: 0;
-}
-
-.filled {
-  background: purple;
 }
