--- a/style.css
+++ b/style.css
@@ -4,8 +4,9 @@ body {
   justify-content: center;
   text-align: center;
   align-items: center;
-  background-color: lavender;
-  color: purple;
+  background-image: url("/background.jpg");
+  background-size: 100%;
+  color: black;
   font-family: "Press Start 2P", Courier, cursive;
 }
 
@@ -17,18 +18,20 @@ body {
 
 /* CONTROL PANEL -------------------------------- */
 #controlPanel {
-  border: 1px solid black;
   width: 250px;
   height: 500px;
   display: grid;
   grid-template-columns: repeat(2, 100px);
-  padding: 10px;
   gap: 5px;
   justify-content: center;
+  border: 2px solid green;
+  margin-bottom: 30px;
+  padding: 0;
 }
 
 .btn {
-  background-color: white;
+  background-color: black;
+  color: white;
   border-radius: 5px;
   border: 2px black solid;
   /* width: 100px; */
@@ -36,12 +39,17 @@ body {
   font-family: "Press Start 2P", Courier, cursive;
 }
 .btn:hover {
-  background: rgb(198, 195, 195);
-  border: 1px solid red;
+  border: 2px solid red;
 }
 #refreshPageBtn,
 #resizeGridBtn {
   grid-column: 1 / 3;
+}
+
+#toggleRainbowBtn {
+  background-image: url("http://www.clker.com/cliparts/i/g/L/P/4/3/rainbow-square-md.png");
+  background-size: 100%;
+  padding: 0;
 }
 
 #gridContainer {
@@ -50,10 +58,47 @@ body {
   width: 500px;
   height: 500px;
   padding: 0;
+  border: 2px solid cyan;
 }
 
 .square {
   background-color: white;
   padding: 0;
   margin: 0;
+}
+
+/* FORM ---------------------------------- */
+.form {
+  display: grid;
+  grid-template-columns: repeat(2, 100px);
+  border: 2px solid yellow;
+  font-size: 14px;
+  width: 200px;
+  text-align: center;
+}
+
+.form input {
+  font-size: 16px;
+  width: 50px;
+  padding: 0;
+}
+
+#height {
+  grid-column: 1 / 2;
+}
+
+#width {
+  grid-column: 2 /3;
+}
+
+.hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+#submitInputBtn {
+  grid-column: 1 /3;
+  margin: 0 40px;
+  border-radius: 10px;
+  padding: 0;
 }
