--- a/style.css
+++ b/style.css
@@ -21,7 +21,8 @@ body {
   width: 250px;
   height: 500px;
   display: grid;
-  grid-template-columns: repeat(2, 100px);
+  grid-template-columns: repeat(3, 70px);
+  grid-template-rows: auto;
   gap: 5px;
   justify-content: center;
   border: 2px solid green;
@@ -34,7 +35,7 @@ body {
   color: white;
   border-radius: 5px;
   border: 2px black solid;
-  /* width: 100px; */
+  height: 70px;
   padding: 10px 0px;
   font-family: "Press Start 2P", Courier, cursive;
 }
@@ -43,7 +44,7 @@ body {
 }
 #refreshPageBtn,
 #resizeGridBtn {
-  grid-column: 1 / 3;
+  grid-column: 1 / 4;
 }
 
 #toggleRainbowBtn {
