--- a/style.css
+++ b/style.css
@@ -6,9 +6,11 @@ body {
   text-align: center;
   align-items: center;
   background-image: url("/background.jpg");
-  background-size: 100%;
+  background-size: cover;
+  background-attachment: fixed;
   color: black;
   font-family: "Press Start 2P", Courier, cursive;
+  margin: 20px 0;
 }
 
 #mainContent {
@@ -20,15 +22,12 @@ body {
 /* CONTROL PANEL -------------------------------- */
 #controlPanel {
   width: 250px;
-  height: 500px;
   display: grid;
   grid-template-columns: repeat(3, 70px);
-  grid-template-rows: auto;
+  grid-template-rows: repeat(auto, 100px);
   gap: 5px;
   justify-content: center;
-  border: 2px solid cyan;
-  margin-bottom: 30px;
-  padding: 0;
+  align-content: center;
 }
 
 .btn {
@@ -56,13 +55,13 @@ body {
 
 /* FORM -------------------------------------- */
 #form {
-  display: grid;
-  grid-template-columns: repeat(2, 100px);
+  display: flex;
   font-size: 12px;
   width: 200px;
   text-align: center;
   color: white;
-  border: 2px solid yellow;
+  margin-top: 10px;
+  margin-left: 10px;
 }
 
 .form input {
@@ -97,7 +96,7 @@ body {
 /* GRID AREA ---------------------------------- */
 #gridContainer {
   display: grid;
-  border: 1px solid black;
+  border: 2px solid black;
   width: 500px;
   height: 500px;
   padding: 0;
@@ -106,7 +105,19 @@ body {
 }
 
 .square {
-  border: 1px solid black;
+  /* border: 1px solid black; */
   padding: 0;
   margin: 0;
+}
+
+/* FOOTER ---------------------------------- */
+footer {
+  font-size: 10px;
+  /* background-color: black; */
+  width: 100%;
+  color: white;
+  text-align: center;
+  position: fixed bottom;
+  height: 40px;
+  margin-top: 100px;
 }
