--- a/style.css
+++ b/style.css
@@ -117,7 +117,8 @@ footer {
   width: 100%;
   color: white;
   text-align: center;
-  position: fixed bottom;
+  position: fixed;
+  bottom: 0px;
   height: 40px;
   margin-top: 100px;
 }
