--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* GENERAL -------------------------------------- */
 body {
   display: flex;
   flex-direction: column;
@@ -5,12 +6,18 @@ body {
   gap: 50px;
   text-align: center;
   align-items: center;
-  background-image: url("https://j-elkins.github.io/etch-a-sketch/background.jpg");
+  background-image: url("https://j-elkins.github.io/etch-a-sketch/background.jpg"),
+    linear-gradient(rgb(80, 0, 138), rgb(172, 40, 179));
+  background-color: purple;
   background-size: cover;
   background-attachment: fixed;
   color: black;
   font-family: "Press Start 2P", Courier, cursive;
   margin: 20px 0;
+}
+
+h1 {
+  text-shadow: 0 0 20px white, 0 0 10px white;
 }
 
 #mainContent {
@@ -39,9 +46,16 @@ body {
   padding: 10px 0px;
   font-family: "Press Start 2P", Courier, cursive;
 }
+
 .btn:hover {
   border: 2px solid red;
 }
+
+.btn:active {
+  border: 2px solid red;
+  transform: 2s;
+}
+
 #refreshPageBtn,
 #resizeGridBtn {
   grid-column: 1 / 4;
@@ -50,6 +64,7 @@ body {
 #toggleRainbowBtn {
   background-image: url("http://www.clker.com/cliparts/i/g/L/P/4/3/rainbow-square-md.png");
   background-size: 100%;
+  background-color: rgb(146, 44, 249);
   padding: 0;
 }
 
@@ -78,19 +93,7 @@ body {
 }
 
 #width {
-  grid-column: 2 /3;
-}
-
-.hidden {
-  opacity: 0;
-  pointer-events: none;
-}
-
-#submitInputBtn {
-  grid-column: 1 /3;
-  margin: 0 40px;
-  border-radius: 10px;
-  padding: 0;
+  grid-column: 2 / 3;
 }
 
 /* GRID AREA ---------------------------------- */
@@ -101,7 +104,7 @@ body {
   height: 500px;
   padding: 0;
   background-color: black;
-  /* border: 2px solid green; */
+  box-shadow: 0 0 30px white, 0 0 10px white;
 }
 
 .square {
