--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
   gap: 50px;
   text-align: center;
   align-items: center;
-  background-image: url("https://j-elkins.github.io/etch-a-sketch/background.jpg"),
+  background-image: url("https://jasmineelkins.github.io/etch-a-sketch/background.jpg"),
     linear-gradient(rgb(80, 0, 138), rgb(172, 40, 179));
   background-color: purple;
   background-size: cover;
@@ -17,7 +17,7 @@ body {
 }
 
 h1 {
-  text-shadow: 0 0 20px white, 0 0 10px white;
+  text-shadow: 0 0 15px white, 0 0 10px white, 0 0 5px rgb(249, 152, 7);
 }
 
 #mainContent {
@@ -28,13 +28,19 @@ h1 {
 
 /* CONTROL PANEL -------------------------------- */
 #controlPanel {
-  width: 250px;
-  display: grid;
-  grid-template-columns: repeat(3, 70px);
-  grid-template-rows: repeat(auto, 100px);
+  display: flex;
+  flex-direction: column;
   gap: 5px;
   justify-content: center;
   align-content: center;
+}
+
+#topRow,
+#bottomRow {
+  display: grid;
+  grid-template-columns: repeat(3, 70px);
+  gap: 5px;
+  justify-content: center;
 }
 
 .btn {
@@ -56,9 +62,15 @@ h1 {
   transform: 2s;
 }
 
-#refreshPageBtn,
 #resizeGridBtn {
-  grid-column: 1 / 4;
+  width: 100%;
+}
+
+#resizeDiv {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 #toggleRainbowBtn {
@@ -88,14 +100,6 @@ h1 {
   border-radius: 8px;
 }
 
-#height {
-  grid-column: 1 / 2;
-}
-
-#width {
-  grid-column: 2 / 3;
-}
-
 /* GRID AREA ---------------------------------- */
 #gridContainer {
   display: grid;
@@ -104,7 +108,7 @@ h1 {
   height: 500px;
   padding: 0;
   background-color: black;
-  box-shadow: 0 0 30px white, 0 0 10px white;
+  box-shadow: 0 0 50px white, 0 0 10px white;
 }
 
 .square {
@@ -123,9 +127,66 @@ footer {
   position: absolute;
   bottom: 0;
   height: 40px;
-  margin-top: 100px;
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 10px;
+}
+
+/* MEDIA QUERIES --------------------------- */
+@media screen and (max-width: 800px) {
+  #mainContent {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+  }
+
+  #gridContainer {
+    order: 0;
+  }
+
+  #controlPanel {
+    order: 1;
+  }
+
+  #controlPanel {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(4, auto);
+    grid-template-rows: repeat(auto, 100px);
+    gap: 10px;
+    justify-content: center;
+    align-content: center;
+  }
+
+  #refreshPageBtn {
+    order: 0;
+  }
+
+  #topRow {
+    order: 1;
+  }
+
+  #bottomRow {
+    order: 4;
+  }
+
+  #resizeGridBtn {
+    width: 100%;
+  }
+
+  #resizeDiv {
+    order: 3;
+  }
+
+  #refreshPageBtn,
+  #resizeDiv {
+    grid-column: 1 / 4;
+  }
+
+  footer {
+    position: static;
+  }
 }
